stylesheet.css
body{
background-color: green;
margin: 0px;
font-family: Verdana;
font-size: 14px;

}

#header{
background-color : rgb(20,20,160);
border-bottom: 1px blue solid;
height: 90px;
}

#nav{
background-color : rgb(20,20,160);
height: 90px;
font-size: 120%;
padding: 15px;
}

#nav ul{
padding: 0;
margin: 0;
list-style-type: none;
text-align: left;
}

#nav li{
display: inline;
padding: 15px;
vertical-align: middle;
}

#nav a{
text-decoration: none;
padding: 8px;
color: white;
vertical-align: middle;
}

#nav a:hover{

}

.burger{ 
     position: absolute;
     top: 30px;
     left: 40px;    
     cursor: pointer;
}

span.glyphicon-menu-hamburger{
     font-size: 30px;
     color: white;
}

.cross{     
     position: absolute;
     top: 30px;
     left: 40px;    
     cursor: pointer; 
}

span.glyphicon-remove{
     font-size: 30px;
     color: white;
}

@media all and (max-width: 2000px){ 
      #nav ul{
          background-color: rgb(20,20,160);
          position: absolute;
          top: 70px;
          left:0;
          z-index:1;
          padding:0;
          height: 610px;
          
   }

      #nav li{ 
          display: block;
          width: 200px;           
          padding: 30px; 
               
   }
      #nav ul a{           
           text-align: left;
           box-sizing: border-box;
  }
      #nav li:hover{ 
           background-color: rgb(120,120,240);
           
  }
      
}
#bg{
position: relative;

}


#bg img{
width:100%; 
height:590px;; 
margin:0 auto;
}

#bg #dlbuttons{
width: 500px;
position: absolute;
right: 30%;
bottom: 150px;
padding: 20px;
}

#bg #dlbuttons a{
width: 180px;
height:70px;
padding:25px;
font-size:110%;
display: inline-block;
background-color:white;
color: blue;
text-decoration: none;
border: 1px white solid;
border-radius: 15px;
margin: 15px;
}

#apple{
background: url("apple.png") no-repeat center;
background-size: 60px 60px;
z-index:99;
}

#playstore{
background: url("googleplay.jpg") no-repeat center;
background-size: 60px 60px;
}
#arrow{
position: absolute;
bottom: 30px;
right: 50%;
padding:0;
-webkit-animation: mymove 5s infinite;
animation: mymove 5s infinite;
}

@-webkit-keyframes mymove {
    0%   {bottom: 20px;}
    50%  {bottom: 60px;}
    100% {bottom: 20px;}
}

span.glyphicon-menu-down {
    font-size: 40px;
    color: white;
}
#contents{
background-color: red;
font-size: 200%;
}

#left1{
width: 50%;
height:500px;
background-color: yellow;
float: left;
}


#right1{
width: 50%;
height:500px;
background-color: green;
float: left;
}


#left2{
width: 50%;
height:500px;
background-color: purple;
float: left;
}
#right2{
width: 50%;
height:500px;
background-color: pink;
float: left;
}

#left3{
width: 50%;
height:500px;
background-color: white;
float: left;
}

#right3{
width: 50%;
height:500px;
background-color: black;
float: left;
}

#footer{
background-color: rgb(20,20,160);
height: 70px;
border: 1px blue solid;
margin: 0px;
text-align: center;
font-size: 90%;
color: white;
clear: both;
}

#footer ul{
padding: 15px;
margin: 0px;
list-style-type: none;
}

#footer li{
display: inline;
padding: 10px;
}

#footer a{
text-decoration: none;
color: white;
}

#footer a:hover{
color: red;
}

